--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node-dev --respawn --transpile-only src/main.ts",
     "test": "jest --config jest.config.js",
     "test:coverage": "jest --coverage"
   },
@@ -11,9 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^4.1.2",
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@types/chalk": "^0.4.31",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.10",
