--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --respawn --transpile-only src/main.ts",
-    "test": "jest --config jest.config.js",
+    "start": "NODE_ENV=development ts-node-dev --respawn --transpile-only src/main.ts",
+    "test": "NODE_ENV=test jest --config jest.config.js",
     "test:coverage": "jest --coverage"
   },
   "keywords": [],
